  scalability
* added BootstrappingDependencyEvent for notifying the pre-refresh dependency activities
* changed extender configuration to META-INF/spring/extender to avoid confusion
* introduced OsgiServiceDependencyFactory interface to allow third parties to add service dependencies required 
  before an application context is refreshed

Package org.springframework.osgi.io
* improved OsgiBundleResource#getFile() method when dealing with resources in expanded bundles
* OsgiBundleResource#lastModified() works even when the underlying bundle cannot be resolved to a File
* added fallback logic to OsgiBundleResource#lastModified() if the underlying platform doesn't return a valid value

Package org.springframework.osgi.service
* added descriptive exception when invoking non-public methods on class proxies (caused by classes with final mehtods)
* added ServiceProxyDestroyedException to indicate the illegal usage of a destroyed proxy
* refined dynamic proxies (unary cardinality) to throw ServiceProxyDestroyedException instead of IllegalStateException
* refined static proxies (multi cardinality) to throw ServiceProxyDestroyedException if used after being destroyed
* introduced ServiceReferenceProxy interface (available through ImportedOsgiServiceProxy) for accessing the native 
  service reference
* OsgiServiceFactoryBean performs type check validation on given interfaces at startup
* removed internal 'dependency' subpackage (and associated implementations) from the public API
* improved significantly exporter/importer transitive dependency tracking for both single and multi service proxies
* added default cardinality (1..X) when none is specified for both single and multiple service importers
* deprecated importer base class AbstractOsgiServiceImportFactoryBean
* deprecated exporter base class AbstractOsgiServiceExporter

Package org.springframework.osgi.util
* fixed internal handling of nested beans when discovering transitive dependencies of a bean