@@ -8,15 +8,26 @@
     are embedded in other bundles. Though there are <ulink url="http://www.aqute.biz/Code/Bnd">tools</ulink> that make the bundling 
     process easy, it is desirable to have the artifacts prepacked so they can be used immediately for development.</para> 
     
-    <para>To address this problem, the Spring-DM project has osgified most of the common libraries and made them available through a dedicated
-    Maven <ulink url="http://maven.apache.org/guides/introduction/introduction-to-repositories.html">repository</ulink> available
-    at <literal>http://maven.springframework.org/osgi</literal>.
-    
-    <warning>The repository is <emphasis>provided as-is</emphasis> without any kind of support. The repository structure/content
-    can (and will) change until it becomes stable.
-    These being said, we hope you find it useful and we'd like to <ulink url="http://jira.springframework.org/browse/OSGI">know</ulink> 
-    if there are improvement that can be made to it.</warning> 
+    <para>SpringSource <ulink url="http://www.springsource.com/repository/">Enterprise Bundle Repository</ulink> (in short BRITS) addresses this problem by 
+    providing 
+    <quote>a collection of open source libraries commonly used for developing enterprise Java applications with the Spring Framework</quote> (taken
+    from the Repository <ulink url="http://www.springsource.com/repository/app/faq">FAQ</ulink>). With the availability of the Bundle Repository,
+    the Spring-DM old repository (see below) has been deprecated and it is being used until migrating completely to BRITS. It is highly recommended
+    that users migrate as well to BRITS as it provides significantly more libraries and it is intended to be a user-facing infrastructure component. 
     </para>
+    
+    <section id="appendix-osgi-repo:old-repo">
+    	<title>Spring-DM temporary OSGi Repository</title>
+    	
+    	<para>Unfortunately, not all Spring-DM dependencies are available in BIRTS and thus Spring-DM still needs to maintain some of its own 
+    	dedicated Maven <ulink url="http://maven.apache.org/guides/introduction/introduction-to-repositories.html">repository</ulink> available
+	    at <literal>http://maven.springframework.org/osgi</literal>.
+	    
+	    <warning>The repository is <emphasis>provided as-is</emphasis> without any kind of support. The repository structure/content
+	    can (and will) change until it becomes stable. Before using Spring-DM repository make sure the needed artifact are not available
+	    in BRITS. These being said, we hope you find it useful and we'd like to <ulink url="http://jira.springframework.org/browse/OSGI">know</ulink> 
+	    if there are improvement that can be made to it.</warning> 
+	    </para>
 
 	<section id="appendix-osgi-repo:conventions">
 		<title>Repository conventions</title>
@@ -67,6 +78,5 @@
 		Ivy <ulink url="http://ant.apache.org/ivy/history/latest-milestone/tutorial/start.html">tutorial</ulink> for more information.</para>
 	</section>
 	
-
-
+	</section>
 </appendix>
