@@ -25,7 +25,7 @@ ignore.backport.version=3.1.0
 ignore.junit.version=3.8.2
 ignore.log4j.version=1.2.15-SNAPSHOT
 
-ignore.spring.version=2.5.5-SNAPSHOT
+ignore.spring.version=2.5.5
 ignore.spring.osgi.version=1.1.0-rc1-SNAPSHOT
 ignore.slf4j.version=1.5.0
 ignore.asm.version=2.2.3
